--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -110,10 +110,15 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
+    implementation 'com.google.firebase:firebase-bom:31.2.0'
 
+    // Add the Firebase Firestore SDK
+    implementation 'com.google.firebase:firebase-firestore'
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
     } else {
         implementation jscFlavor
     }
 }
+apply plugin: 'com.google.gms.google-services'
+
